src/main/resources/locust-kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: locust
spec:
  rules:
  - host: locust.local.com
    http:
      paths:
      - backend:
          serviceName: locust-service
          servicePort: 8089
        path: /
